main/feature/jsAPI - added tab title and logo, fixed display box alignment

--- a/spacex_app/src/App.css
+++ b/spacex_app/src/App.css
@@ -23,7 +23,7 @@ html{
   margin: 10px auto;
 }
 
-.row{padding: 20px;}
+.row{padding: 5px;}
 
 .col{
   padding: 10px;
